Fix CSS Errors that were causing the squares to shift down on click

--- a/src/components/Board.css
+++ b/src/components/Board.css
@@ -1,6 +1,1 @@
-.board {
-  margin-top: 150px;
-}
-div {
-  margin: -1px;
-}
+
