--- a/src/components/Square.css
+++ b/src/components/Square.css
@@ -7,5 +7,5 @@
   margin-right: -1px;
   font-size: 50px;
   font-weight: bold;
-  vertical-align: bottom;
+  vertical-align: middle;
 }
